--- a/Practica2/templates/index_logged.html
+++ b/Practica2/templates/index_logged.html
@@ -15,7 +15,7 @@
     	</a>
         <div class="user_div">
           <div class="header_user_info">
-            <div class="header_user_name">Welcome User001</div>
+            <div class="header_user_name">Welcome {{user['name']}}</div>
             <img class="header_user_icon" src="./images/user.png" alt="The image could not be shown.">
           </div>
 
