--- a/Practica2/templates/home.html
+++ b/Practica2/templates/home.html
@@ -1,61 +1,51 @@
-<!DOCTYPE HTML>
-<html lang="en">
-    <head>
-      <meta charset="utf-8"> <!-- Carácteres españoles -->
-      <link rel=StyleSheet href={{ url_for('static', filename='css/styles.css') }}>
-      <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-      <title>CDdede</title>
-    </head>
-    <body>
-      <form action="{{ url_for('search') }}" target="content_iframe" id="search_div">
-        <div id="search_field">
-          <input type="text" placeholder="Search" id="search_input" name="term" value={{term or ''}}>
-          <input type="image" src={{ url_for('static', filename='images/search.png') }} id="search_button" alt="The icon could not be shown.">
-          <!-- Input used to store the showed categoty-->
-          <input type="hidden" name="prev_category" value={{'0' or category['id']}}>
-        </div>
-        
-        <div class="select-box">
-          <select name="category" onchange="this.form.submit()">
-            {% for cat in categories_data %}
-              {% if category and category['id'] == cat['id'] %}
-                <option selected="selected" value={{cat['id']}} class="dropdown-item" type="submit">
-                  {{cat['name']}}
-                </option>
-              {% else %}
-                 <option value={{cat['id']}} class="dropdown-item" type="submit">
-                  {{cat['name']}}
-                </option>
-              {% endif %}
-            {% endfor %}
-          </select>
-        </div>
-      </form>
+{% extends "index.html" %}
+{% block content %}
+  <form action="{{ url_for('search') }}" target="content_iframe" id="search_div">
+    <div id="search_field">
+      <input type="text" placeholder="Search" id="search_input" name="term" value={{term or ''}}>
+      <input type="image" src={{ url_for('static', filename='images/search.png') }} id="search_button" alt="The icon could not be shown.">
+      <!-- Input used to store the showed categoty-->
+      <input type="hidden" name="prev_category" value={{'0' or category['id']}}>
+    </div>
 
-      <h3>Recommended</h3>
-      <ul class="film_list">
-        {% for film in recommended_films %}
-          <li class="film_item">
-            <a href={{ url_for('detail', id=film['id']) }} target="content_iframe">
-              <img class="film_item_img" src={{ url_for('data', filename='images/'+film['image']) }} alt="The image could not be shown.">
-              <div class="film_item_text">{{film['title']}}<br>{{film['price']}}$</div>
-            </a>
-          </li>
+    <div class="select-box">
+      <select name="category" onchange="this.form.submit()">
+        {% for cat in categories_data %}
+          {% if category and category['id'] == cat['id'] %}
+            <option selected="selected" value={{cat['id']}} class="dropdown-item" type="submit">
+              {{cat['name']}}
+            </option>
+          {% else %}
+             <option value={{cat['id']}} class="dropdown-item" type="submit">
+              {{cat['name']}}
+            </option>
+          {% endif %}
         {% endfor %}
-      </ul>
+      </select>
+    </div>
+  </form>
 
-      <h3>Best sellers</h3>
-      <ul class="film_list">
-        {% for film in best_seller_films %}
-          <li class="film_item">
-            <a href={{ url_for('detail', id=film['id']) }} target="content_iframe">
-              <img class="film_item_img" src={{ url_for('data', filename='images/'+film['image']) }} alt="The image could not be shown.">
-              <div class="film_item_text">{{film['title']}}<br>{{film['price']}}$</div>
-            </a>
-          </li>
-        {% endfor %}
-      </ul>
+  <h3>Recommended</h3>
+  <ul class="film_list">
+    {% for film in recommended_films %}
+      <li class="film_item">
+        <a href={{ url_for('detail', id=film['id']) }} target="content_iframe">
+          <img class="film_item_img" src={{ url_for('data', filename='images/'+film['image']) }} alt="The image could not be shown.">
+          <div class="film_item_text">{{film['title']}}<br>{{film['price']}}$</div>
+        </a>
+      </li>
+    {% endfor %}
+  </ul>
 
-    </body>
-</html>
+  <h3>Best sellers</h3>
+  <ul class="film_list">
+    {% for film in best_seller_films %}
+      <li class="film_item">
+        <a href={{ url_for('detail', id=film['id']) }} target="content_iframe">
+          <img class="film_item_img" src={{ url_for('data', filename='images/'+film['image']) }} alt="The image could not be shown.">
+          <div class="film_item_text">{{film['title']}}<br>{{film['price']}}$</div>
+        </a>
+      </li>
+    {% endfor %}
+  </ul>
+{% endblock %}
