Improvements and Finished Week 2

--- a/Practica2/templates/register.html
+++ b/Practica2/templates/register.html
@@ -4,7 +4,7 @@
 
     <h2>Register</h2>
 
-    <form name="register" action={{ url_for('register') }} target="body" method="post" id="regForm">
+    <form name="register" action={{ url_for('register') }} method="post" id="regForm">
       <div class="mainContainer">
         <div class="verContainer">
 
