--- a/Practica2/templates/index.html
+++ b/Practica2/templates/index.html
@@ -18,7 +18,7 @@
           <div class="user_div">
             <div class="header_user_info">
               <div class="header_user_name">Welcome {{user['name']}}</div>
-              <img class="header_user_icon" src="./images/user.png" alt="The image could not be shown.">
+              <img class="header_user_icon" src={{ url_for('static', filename='images/user.png') }} alt="The image could not be shown.">
             </div>
 
             <div>
@@ -59,7 +59,7 @@
           <div class="user_div">
             <div class="header_user_info">
               <div class="header_user_name">Welcome {{user['name']}}</div>
-              <img class="header_user_icon" src="./images/user.png" alt="The image could not be shown.">
+              <img class="header_user_icon" src={{ url_for('static', filename='images/user.png') }} alt="The image could not be shown.">
             </div>
 
             <div>
