--- a/Practica2/templates/search.html
+++ b/Practica2/templates/search.html
@@ -1,6 +1,6 @@
 {% extends "index.html" %}
 {% block content %}
-  <form action="{{ url_for('search') }}" target="content_iframe" id="search_div">
+  <form action="{{ url_for('search') }}" id="search_div">
     <div id="search_field">
       <input type="text" placeholder="Search" id="search_input" name="term" value={{term or ''}}>
       <input type="image" src={{ url_for('static', filename='images/search.png') }} id="search_button" alt="The icon could not be shown.">
@@ -31,7 +31,7 @@
     <ul class="result_list">
       {% for film in results %}
         <li class="result_item">
-          <a href={{ url_for('detail', id=film['id']) }} target="content_iframe" class="list_a_item">
+          <a href={{ url_for('detail', id=film['id']) }} class="list_a_item">
             <img class="result_item_img" src={{ url_for('data', filename='images/'+film['image']) }} alt="The image could not be shown.">
             <div>
               <div class="result_item_title">{{film['title'] + ' - ' + film['price']|string + '$'}}</div>
