--- a/Practica2/static/css/styles.css
+++ b/Practica2/static/css/styles.css
@@ -110,6 +110,17 @@ body, html{
 				opacity: 1.0;
 			}
 
+			.header_cart_icon{
+				height: 24px;
+				float: right;
+				cursor: pointer;
+				opacity: 0.9;
+			}
+
+			.header_cart_icon:hover{
+				opacity: 1.0;
+			}
+
 /* Body */
 .body {
 	display: flex;
