--- a/Practica2/templates/detail.html
+++ b/Practica2/templates/detail.html
@@ -57,7 +57,7 @@
 
           </div>
 
-          <form action={{ url_for('addToBasquet', id=film['id']) }} class="verButtonContainer">
+          <form action={{ url_for('addToBasket', id=film['id']) }} class="verButtonContainer">
             <input class="addButton" type="submit" value="Add to Basket">
           </form>
           
