Basket working with prompts

--- a/Practica2/static/css/styles.css
+++ b/Practica2/static/css/styles.css
@@ -592,3 +592,13 @@ h5{
 			float: right;
 			cursor: pointer;
 		}
+
+		.addButton:hover{
+			background-color: #06BA83;
+		}
+
+
+		/*Shopping cart*/
+		#need_logged{
+			float: right;
+		}
